theLanguageEmporium/force-app/main/default/objects/Quiz_Data__c/Quiz_Data__c.object-meta.xml
<CustomObject>
    <label>Quiz Data</label>
    <nameField>
        <displayFormat>QUIZ-{0000}</displayFormat>
        <label>Quiz Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quiz Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>