theLanguageEmporium/force-app/main/default/objects/Quiz_Data__c/fields/Quiz_Date__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Date__c</fullName>
    <label>Quiz Date</label>
    <type>DateTime</type>
</CustomField>