theLanguageEmporium/force-app/main/default/objects/Quiz_Data__c/fields/Quiz_Name__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Name__c</fullName>
    <label>Quiz Name</label>
    <length>75</length>
    <type>Text</type>
</CustomField>