theLanguageEmporium/force-app/main/default/objects/Quiz_Data__c/fields/Quiz_Score__c.field-meta.xml
<CustomField>
    <fullName>Quiz_Score__c</fullName>
    <label>Quiz Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>