theLanguageEmporium/force-app/main/default/objects/Quiz_Data__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>User_Nickname__c</columns>
    <columns>Quiz_Date__c</columns>
    <columns>Quiz_Name__c</columns>
    <columns>Quiz_Score__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>